change nickname to email
